# sdfsdf

./: .gitignore  CMakeLists.txt  LICENSE  phase5_out.txt
benchmarks/: BenchmarkCommon.h  CMakeLists.txt  benchmark_4d_coupled_friction_reference.cpp  benchmark_cylinder_spin.cpp  benchmark_engine_mesh_sdf_drop.cpp  benchmark_engine_mesh_sdf_multicontact.cpp  benchmark_engine_multicontact.cpp  benchmark_engine_oblique_box_4d_reference.cpp  benchmark_engine_oblique_box_friction.cpp  benchmark_engine_oblique_box_polyhedral_compare.cpp  benchmark_engine_sliding_friction_reference.cpp  benchmark_engine_torsion_compare.cpp  benchmark_engine_tripod_landing.cpp  benchmark_mass_ratio_stack.cpp  benchmark_penalty_tripod_tuning.cpp  benchmark_resolution_convergence.cpp  benchmark_sharp_drop.cpp  benchmark_sphere_drop_compare.cpp  benchmark_torsion_friction_reference.cpp  generate_plots.py
documents/paper/: main.tex
examples/: CMakeLists.txt
results/: README.md  benchmark_4d_coupled_friction_reference.csv  benchmark_4d_coupled_friction_reference_summary.csv  benchmark_cylinder_spin.csv  benchmark_cylinder_spin_summary.csv  benchmark_engine_mesh_sdf_drop.csv  benchmark_engine_mesh_sdf_drop_summary.csv  benchmark_engine_mesh_sdf_multicontact.csv  benchmark_engine_mesh_sdf_multicontact_summary.csv  benchmark_engine_multicontact.csv  benchmark_engine_multicontact_summary.csv  benchmark_engine_oblique_box_4d_reference.csv  benchmark_engine_oblique_box_4d_reference_summary.csv  benchmark_engine_oblique_box_friction.csv  benchmark_engine_oblique_box_friction_penalty_tuning.csv  benchmark_engine_oblique_box_friction_summary.csv  benchmark_engine_oblique_box_polyhedral_compare.csv  benchmark_engine_oblique_box_polyhedral_compare_summary.csv  benchmark_engine_sliding_friction_reference.csv  benchmark_engine_sliding_friction_reference_summary.csv  benchmark_engine_torsion_compare.csv  benchmark_engine_torsion_compare_summary.csv  benchmark_engine_tripod_landing.csv  benchmark_engine_tripod_landing_summary.csv  benchmark_mass_ratio_stack.csv  benchmark_mass_ratio_stack_summary.csv  benchmark_penalty_tripod_tuning.csv  benchmark_penalty_tripod_tuning_summary.csv  benchmark_resolution_convergence.csv  benchmark_resolution_convergence_summary.csv  benchmark_sharp_drop.csv  benchmark_sharp_drop_summary.csv  benchmark_sphere_drop_compare.csv  benchmark_sphere_drop_compare_summary.csv  benchmark_torsion_friction_reference.csv  benchmark_torsion_friction_reference_summary.csv  reviewer_comparison_summary.csv  solver_convergence_summary.csv
src/: CMakeLists.txt
src/collision/: SpatialHash.h
src/dynamics/: ContactDynamics.h  RigidBody.h  ViscoelasticContact.h
src/engine/: SimulationEngine.h
src/geometry/: AnalyticalSDF.h  MeshSDF.h  NayakSurface.h  VolumetricIntegrator.h
src/math/: FischerBurmeister.h  JordanAlgebra.h
src/solver/: FourDPGSSolver.h  FrictionPGSSolver.h  NormalLCPSolver.h  PenaltySolver.h  PolyhedralFrictionSolver.h  SOCCPSolver.h  SemiSmoothNewton.h
tests/: CMakeLists.txt  test_phase1.cpp  test_phase2.cpp  test_phase3.cpp  test_phase4.cpp  test_phase5.cpp  test_sdf.cpp
